--- a/mdagenerator/pom.xml
+++ b/mdagenerator/pom.xml
@@ -1,12 +1,10 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.soffid.tools</groupId>
 	<artifactId>mdagenerator</artifactId>
 	<name>Soffid MDA Generator</name>
-	<version>2.1.8-SNAPSHOT</version>
+	<version>2.2.0</version>
 	<parent>
 		<groupId>com.soffid</groupId>
 		<artifactId>template</artifactId>
@@ -17,7 +15,7 @@
 	</prerequisites>
 	<scm>
 		<connection>scm:git:ssh://git@github.com/SoffidIAM/tools.git</connection>
-		<tag>HEAD</tag>
+		<tag>mdagenerator-2.2.0</tag>
 	</scm>
 
 
