--- a/maven-mda-plugin/pom.xml
+++ b/maven-mda-plugin/pom.xml
@@ -5,13 +5,13 @@
 	<artifactId>mda-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
 	<name>Maven MDA Plugin</name>
-	<version>2.3.0</version>
+	<version>2.3.1-SNAPSHOT</version>
 	<prerequisites>
 		<maven>2.0.9</maven>
 	</prerequisites>
 	<scm>
 		<connection>scm:git:ssh://git@github.com:/SoffidIAM/tools.git</connection>
-		<tag>mda-maven-plugin-2.3.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 
@@ -35,7 +35,7 @@
 		<dependency>
 			<groupId>com.soffid.tools</groupId>
 			<artifactId>mdagenerator</artifactId>
-			<version>2.3.0</version>
+			<version>2.3.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.apache.maven</groupId>
