--- a/mdagenerator/pom.xml
+++ b/mdagenerator/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.soffid.tools</groupId>
 	<artifactId>mdagenerator</artifactId>
 	<name>Soffid MDA Generator</name>
-	<version>2.3.1</version>
+	<version>2.3.2-SNAPSHOT</version>
 	<parent>
 		<groupId>com.soffid</groupId>
 		<artifactId>template</artifactId>
@@ -15,7 +15,7 @@
 	</prerequisites>
 	<scm>
 		<connection>scm:git:ssh://git@github.com/SoffidIAM/tools.git</connection>
-		<tag>mdagenerator-2.3.1</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 
